fix(a11y): #192 improve contrast in sidemenu and ArticleTitle

--- a/client/src/components/preview/ArticlePage.scss
+++ b/client/src/components/preview/ArticlePage.scss
@@ -49,12 +49,16 @@
       font-size: 3.8rem;
       font-weight: normal;
       line-height: 4.1rem;
-      text-shadow: 3px 5px 2px #474747;
+      // text-shadow: 3px 5px 2px #474747;
       box-decoration-break: clone;
+      display: inline-block;
+      background-color: rgba(0,0,0,.7);
+      padding: 5px;
 
       @include breakpoint(desktop) {
         font-size: 7rem;
         line-height: 7rem;
+        padding: 10px;
       }
     }
 
@@ -66,6 +70,9 @@
       line-height: 1.45rem;
       text-shadow: 0em 0em 10px #444;
       box-decoration-break: clone;
+      display: inline-block;
+      padding: 5px;
+      background-color: rgba(0,0,0,.7);
 
       @include breakpoint(desktop) {
         margin-top: $gap2;
