--- a/client/src/components/preview/Doc.scss
+++ b/client/src/components/preview/Doc.scss
@@ -3,7 +3,7 @@
 .FocusIcon {
   background-image: url('../assets/img/pictos-focus.svg');
   background-repeat: no-repeat;
-  color: #ffc300;
+  color: #ec8e00;
   font-size: 1.8rem;
   padding-left: 40px;
   text-transform: uppercase;
