--- a/client/src/components/preview/LangSelector.scss
+++ b/client/src/components/preview/LangSelector.scss
@@ -1,9 +1,10 @@
 .LangSelector {
   padding: 0;
-  margin-top: 20px;
+  margin-top: 30px;
 
   a {
     text-decoration: none;
+    padding: 2px 5px;
     &:hover {
       text-decoration: none;
     }
@@ -11,6 +12,7 @@
     font-size: 2.1rem;
     color: #777;
     margin-right: 10px;
+
 
     &.other {
       opacity: 0.5;
@@ -22,6 +24,7 @@
     }
     &.current {
       font-weight: bold;
+      outline: solid;
     }
   }
 }
